# multicode

./: AGENTS.md  Cargo.toml  Makefile  README.md  config.codex.yml  config.toml
.codex/agents/: README.md  multicode-code-mapper.toml  multicode-docs-researcher.toml  multicode-github-researcher.toml  multicode-planner-architect.toml  multicode-qa-scenarios.toml  multicode-reviewer.toml  multicode-security-cve.toml  multicode-test-risk.toml
.github/workflows/: build-multicode-remote.yml
apple-container/: Containerfile  build-local.sh
lib/: Cargo.toml  build.rs
lib/migrations/2026-03-11-000002_github_link_status_cache/: down.sql  up.sql
lib/src/: database.rs  lib.rs  logging.rs  manager.rs  opencode.rs  remote_action.rs  schema.rs  test_support.rs  tree_scan.rs
lib/tests/: apple_container_runtime_integration.rs  combined_service_sandbox_integration.rs
remote/: Cargo.toml
remote/src/: lib.rs  main.rs  orchestration.rs
remote/tests/: docker_remote_integration.rs
tui/: Cargo.toml
tui/src/: app.rs  icons.rs  main.rs  ops.rs  render.rs  system.rs  tests.rs
workspace-skills/autonomous-state/: SKILL.md
workspace-skills/git-commit-coauthorship/: SKILL.md
workspace-skills/graalvm-reachability-metadata/: SKILL.md
workspace-skills/independent-fix/: SKILL.md
workspace-skills/java-install/: SKILL.md
workspace-skills/machine-readable-clone/: SKILL.md
workspace-skills/machine-readable-issue/: SKILL.md
workspace-skills/machine-readable-pr/: SKILL.md
workspace-skills/micronaut-projects-guide/: SKILL.md
workspace-skills/sonar-pr-report/: SKILL.md
(+34 files in other folders)
