[package]
name = "multicode-remote"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
multicode-lib = { path = "../lib" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
shellexpand = "3"
toml = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["fmt", "ansi"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time", "fs"] }
